--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -2,7 +2,7 @@ name: build debug
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
     types: [ opened, synchronize ]
 
