--- a/.github/workflows/run-spotless.yml
+++ b/.github/workflows/run-spotless.yml
@@ -2,7 +2,7 @@ name: run spotless
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
     types: [ opened, synchronize ]
 
